2005-09-14  Andras Varga

	* opp_msgc: adapted to dup() return type change, see include/ChangeLog

2005-08-05  Andras Varga

	* opp_msgc: generate both const and non-const getter methods for 
	fields of class or struct type.

	* opp_msgc: generate a protected and unimplemented operator==(), 
	to prevent accidental usage of compiler-generated one

	* opp_msgc: added the possibility to set a base class field.
	E.g. kind=5 will generate the setKind(5) line into the constructor.
	Currently opp_msgc is not prepared to check if such field actually
	exists in the base class, so such errors may only be detected during 
	C++ compilation.

2005-08-04  Andras Varga

	* opp_msgc: it is no longer required to write out "fields:" in an
	otherwise empty class definition

	* opp_msgc: added the possibility to declare generated classes to be
	dllexport/dllimport on Windows: 
	   opp_msgc -P MY_EXPORT_DEFINE foo.msg

	* opp_msgc: generated C++ header now contains relevant part of the
	.msg files as Doxygen comment

2005-04-04  Andras Varga

	* nedtool.cc: fixed a bug introduced in 3.1: while it's true that 
	name of an included list file should be understood as relative to 
	location of list file which includes it, but names of NED files 
	in them should be relative to current working directory.

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-23  Andras Varga

	* main.cc renamed to nedtool.cc

2005-03-11  Andras Varga

	* opp_msgc: fix: with customize=true, opp_msgc generates a comment in 
	the .h file containing the minimum code the user has to write -- dup() 
	in that code was missing const modifier [reported by Kurtis Kredo]

2005-03-02  Andras Varga

	* nedc removed (replacement is nedtool)

2005-01-10  Andras Varga

	* main.cc: factored out platform dependencies to include/platdep

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-22  Andras Varga

	* opp_msgc: fix: in generated setArraySize(), avoid calling "new [0]"
	if size==0 is passed.
